<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:id="@+id/scrollView"
        android:fillViewport="true">


    <android.support.constraint.ConstraintLayout


            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:id="@+id/constraintLayout">


        <android.support.constraint.Guideline android:layout_width="wrap_content"
                                              android:layout_height="wrap_content"
                                              android:id="@+id/guideline"
                                              android:orientation="horizontal"
                                              app:layout_constraintGuide_percent="0.03009576"/>
        <android.support.constraint.Guideline android:layout_width="wrap_content"
                                              android:layout_height="wrap_content"
                                              android:id="@+id/guideline2"
                                              android:orientation="horizontal"
                                              app:layout_constraintGuide_percent="0.3"/>
        <TextView
                android:text="@string/bmi_main_mass_kg"
                android:layout_width="@dimen/bmi_wid_txt"
                android:layout_height="@dimen/bmi_height_txt"
                android:id="@+id/masa" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/bmi_marginLR_elem" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/bmi_marginLR_elem"
                android:layout_marginTop="@dimen/bmi_margintop_elem" app:layout_constraintTop_toTopOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.028" android:textSize="@dimen/bmi_txtSize_txt"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/bmi_height_edittext"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editmasa"
                android:layout_marginStart="@dimen/bmi_marginLR_elem"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/bmi_marginLR_elem"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/masa"
                android:onClick="wprowadzam" android:layout_marginTop="@dimen/bmi_margintop_elem"/>

        <Button
                android:text="@string/bmi_main_countbut"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bmi_height_countbmibut"
                android:id="@+id/policzbmi"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/bmi_marginLR_elem" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/bmi_marginLR_elem" android:onClick="wyliczMnieTo" android:background="@color/claret"
                android:textColor="@color/gamboge" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginBottom="@dimen/bmi_marginLR_elem" app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:layout_width="@dimen/bmi_wid_bmitxt"
                android:layout_height="@dimen/bmi_height_bmitxt"
                android:id="@+id/wylbmi"
                android:layout_marginTop="@dimen/bmi_margintop_elem"
                android:textSize="@dimen/bmi_txtSize_bmitxt" android:layout_marginStart="@dimen/bmi_marginLR_elem"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="@dimen/bmi_marginLR_elem"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editwzrost" android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.3"/>
        <TextView
                android:text="@string/bmi_main_height_cm"
                android:layout_width="@dimen/bmi_wid_txt"
                android:layout_height="@dimen/bmi_height_txt"
                android:id="@+id/wzrost" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/bmi_marginLR_elem"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/bmi_marginLR_elem"
                app:layout_constraintTop_toBottomOf="@+id/editmasa" app:layout_constraintHorizontal_bias="0.031"
                android:textSize="@dimen/bmi_txtSize_txt" android:layout_marginTop="@dimen/bmi_margintop_elem"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="@dimen/bmi_height_edittext"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editwzrost"
                app:layout_constraintTop_toBottomOf="@+id/wzrost" android:layout_marginStart="@dimen/bmi_marginLR_elem"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="@dimen/bmi_marginLR_elem"
                app:layout_constraintEnd_toEndOf="parent"
                android:onClick="wprowadzam" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="@dimen/bmi_margintop_elem"/>/>
        <ImageView
                android:layout_width="@dimen/bmi_wid_image"
                android:layout_height="@dimen/bmi_height_image" app:srcCompat="@drawable/cookie_monster"
                android:id="@+id/cmoster"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="0dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.523"/>
        <TextView
                android:layout_width="@dimen/bmi_wid_extratxt"
                android:layout_height="@dimen/bmi_height_txt"
                android:id="@+id/dodatkowy" android:layout_marginTop="@dimen/bmi_margintop_elem"
                app:layout_constraintTop_toBottomOf="@+id/wylbmi"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/bmi_marginLR_elem" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/bmi_marginLR_elem" android:textSize="@dimen/bmi_txtSize_txt"
                android:textAlignment="center" android:layout_marginBottom="@dimen/bmi_margintop_elem"
                app:layout_constraintBottom_toTopOf="@+id/policzbmi" app:layout_constraintVertical_bias="0.0"/>
        <Button
                android:layout_width="@dimen/bmi_wid_infobut"
                android:layout_height="@dimen/bmi_height_bmitxt"
                android:id="@+id/infobut" app:layout_constraintStart_toEndOf="@+id/wylbmi"
                android:layout_marginStart="@dimen/bmi_marginLR_elem" android:layout_marginTop="@dimen/bmi_margintop_elem"
                app:layout_constraintTop_toBottomOf="@+id/editwzrost" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/bmi_marginLR_elem" app:layout_constraintHorizontal_bias="0.0"
                android:background="@drawable/strzalka" android:onClick="info"/>


    </android.support.constraint.ConstraintLayout>
</ScrollView>